--- a/ovms/charts/client/templates/deployment.yaml
+++ b/ovms/charts/client/templates/deployment.yaml
@@ -22,6 +22,7 @@ spec:
       containers:
         - name: ovms-client
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          command: ["python3", "face_detection.py", "--batch_size", "1", "--width", "300", "--height", "300", "--output_dir", "results","--grpc_address", "server-service", "--grpc_port", "9000"]
           ports:
             - containerPort: {{ .Values.service.port }}
               protocol: TCP
