service name change in server

--- a/ovms/charts/client/templates/service.yaml
+++ b/ovms/charts/client/templates/service.yaml
@@ -12,6 +12,6 @@ spec:
       port: 8000
       targetPort: 8000
   selector:
-    io.kompose.service: client-service
+    io.kompose.service: ovms-client
 status:
   loadBalancer: {}
