--- a/ovms/charts/server/templates/service.yaml
+++ b/ovms/charts/server/templates/service.yaml
@@ -11,6 +11,6 @@ spec:
       port: 9000
       targetPort: 9000
   selector:
-    io.kompose.service: server-service
+    io.kompose.service: ovms-server
 status:
   loadBalancer: {}
