reverted volume mount

--- a/ovms/charts/client/templates/deployment.yaml
+++ b/ovms/charts/client/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
               protocol: TCP
           resources: {}
           volumeMounts:
-            - mountPath: /opt/intel/openvino_2023/model_server/demos/face_detection/python/results
+            - mountPath: /app
               name: ovms-client-claim0
       restartPolicy: OnFailure
       volumes:
